# lbm-2d

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  TECHNICAL_REPORT.md  linkedin_posts.md
.github/workflows/: ci.yml
docs/: ahmed.html  airfoil.html  cavity.html  cylinder.html  cylinder_near_wall.html  flat_plate.html  implementation.html  index.html  nozzle.html  orifice_plate.html  periodic_hills.html  pinn.html  results.html  ribs.html  rotating_cylinder.html  side_by_side.html  simulation.html  sports_ball.html  square_cylinder.html  step.html  test_slider.html  theory.html  urban.html
docs/assets/data/: force_re100.json  force_re20.json  force_re200.json  force_re40.json  sim_re100.json  sim_re20.json  sim_re200.json  sim_re40.json
docs/assets/images/: airfoil_data.json
docs/assets/js/: colormaps.js  flow-viewer.js  pinn-inference.js  slider.js  viewer-common.js  viewer.js  wasm_sim.js
docs/assets/wasm/: lbm_solver.wasm
docs/css/: style.css
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  .graphify_uncached.txt  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
output/re100/: frame_1200.vtk  frame_1440.vtk  frame_1680.vtk  frame_1920.vtk  frame_2160.vtk  frame_240.vtk  frame_2400.vtk  frame_2640.vtk  frame_2880.vtk  frame_3120.vtk  frame_3360.vtk  frame_3600.vtk  frame_3840.vtk  frame_4080.vtk  frame_4320.vtk  frame_4560.vtk  frame_480.vtk  frame_4800.vtk  frame_5040.vtk  frame_5280.vtk  frame_5520.vtk  frame_5760.vtk  frame_6000.vtk  frame_6240.vtk  frame_6480.vtk  frame_6720.vtk  frame_6960.vtk  frame_720.vtk  frame_7200.vtk  frame_7440.vtk  frame_7680.vtk  frame_7920.vtk  frame_8160.vtk  frame_960.vtk
output/re20/: frame_0.vtk  frame_10400.vtk  frame_11200.vtk  frame_12000.vtk  frame_12800.vtk  frame_13600.vtk  frame_14400.vtk  frame_15200.vtk  frame_1600.vtk  frame_16000.vtk  frame_16800.vtk  frame_17600.vtk  frame_18400.vtk  frame_19200.vtk  frame_20000.vtk  frame_20800.vtk  frame_21600.vtk  frame_22400.vtk  frame_23200.vtk  frame_2400.vtk  frame_24000.vtk  frame_24800.vtk  frame_25600.vtk  frame_26400.vtk  frame_27200.vtk  frame_28000.vtk  frame_28800.vtk  frame_29600.vtk  frame_30400.vtk  frame_31200.vtk  frame_3200.vtk  frame_32000.vtk  frame_32800.vtk  frame_33600.vtk  frame_34400.vtk  frame_35200.vtk  frame_36000.vtk  frame_36800.vtk  frame_37600.vtk  frame_38400.vtk  (+11 more)
output/re40/: frame_10400.vtk  frame_11200.vtk  frame_12000.vtk  frame_12800.vtk  frame_13600.vtk  frame_14400.vtk  frame_15200.vtk  frame_1600.vtk  frame_16000.vtk  frame_16800.vtk  frame_17600.vtk  frame_2400.vtk  frame_3200.vtk  frame_4000.vtk  frame_4800.vtk  frame_5600.vtk  frame_6400.vtk  frame_7200.vtk  frame_800.vtk  frame_8000.vtk  frame_8800.vtk  frame_9600.vtk
pinn/: README.md  config.py  evaluate.py  export_temporal.py  export_web_data.py  pinn_export_helpers.py  plot_loss_convergence.py  plot_results.py  plot_temporal_l2.py  requirements.txt  train.py  train_cavity.py  train_temporal.py
pinn/cases/cavity/: export_sweep.py  export_temporal.py  plot_loss_convergence.py  plot_results.py  plot_temporal_l2.py  train_steady.py  train_temporal.py
pinn/cases/cylinder/: evaluate.py  train.py
pinn/data/: loader.py  temporal_loader.py
pinn/export/: export_web_data.py
pinn/models/: __init__.py  losses.py  pinn.py
scripts/: batch_postprocess.sh  build_wasm.sh  extract_forces.py  gen_cavity_slider.py  insert_viewer_sections.py  plot_airfoil.py  postprocess.py  run_ahmed.sh  run_airfoil.sh  run_all_cases.sh  run_all_re.sh  run_cavity.sh  run_downwash.sh  run_ribs.sh  run_step.sh  run_urban.sh
src/: ahmed.cpp  airfoil.cpp  airfoil_ibm.cpp  amr.hpp  amr_test.cpp  cavity.cpp  cylinder_near_wall.cpp  downwash.cpp  flat_plate.cpp  geometry.hpp  heated_cylinder.cpp  ibm.hpp  lbm.hpp  lbm_test.cpp  lbm_types.hpp  main.cpp  nozzle.cpp  orifice_plate.cpp  periodic_hills.cpp  ribs.cpp  rotating_cylinder.cpp  side_by_side_cylinders.cpp  sports_ball.cpp  square_cylinder.cpp  step.cpp  thermal.hpp  thermal_cavity.cpp  urban_canyon.cpp  wall_functions.hpp  wasm_main.cpp
src/archive/: lbm_solver.js  wasm_sim.js
